--- a/src/flaskblog/templates/about.html
+++ b/src/flaskblog/templates/about.html
@@ -1,5 +1,5 @@
-{% extends 'root.html' %}
+{% extends "root.html" %}
 
 {% block body %}
-<h1>Welcome to About Page!</h1>
+<h1>About Page</h1>
 {% endblock %}
