--- a/src/flaskblog/templates/login.html
+++ b/src/flaskblog/templates/login.html
@@ -1,54 +1,53 @@
-{% extends 'root.html' %}
+{% extends "root.html" %}
 
 {% block body %}
 <div class="content-section">
-    <form action="" method="POST">
+    <form method="POST" action="">
         {{ form.hidden_tag() }}
         <fieldset class="form-group">
-            <legend class="border-bottom mb-4">Log In</legend>
+            <legend class="border-bottom mb-4">Login Now</legend>
             <div class="form-group">
                 {{ form.email.label(class="form-control-label") }}
                 {% if form.email.errors %}
-                {{ form.email(class="form-control form-control-lg is-invalid") }}
-                <div class="invalid-feedback">
-                    {% for err in form.email.errors %}
-                    <span>{{ err }}</span>
-                    {% endfor %}
-                </div>
-                {% else %}
-                    {{ form.email(class="form-control-lg form-control") }}
+                    {{ form.email(class="form-control form-control-lg is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in form.email.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                    {% else %}
+                    {{ form.email(class="form-control form-control-lg") }}
                 {% endif %}
             </div>
             <div class="form-group">
                 {{ form.password.label(class="form-control-label") }}
                 {% if form.password.errors %}
-                {{ form.password(class="form-control form-control-lg is-invalid") }}
-                <div class="invalid-feedback">
-                    {% for err in form.password.errors %}
-                    <span>{{ err }}</span>
-                    {% endfor %}
-                </div>
+                    {{ form.password(class="form-control form-control-lg is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in form.password.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
                 {% else %}
-                    {{ form.password(class="form-control-lg form-control") }}
+                    {{ form.password(class="form-control form-control-lg") }}
                 {% endif %}
             </div>
-            <div class="form-check mb-3">
+            <div class="form-check">
                 {{ form.remember(class="form-check-input") }}
                 {{ form.remember.label(class="form-check-label") }}
             </div>
-            <div class="form-group">
-                {{ form.submit(class="btn btn-outline-info") }}
-            </div>
-            <small class="text-muted ml-2">
-                <a href="{{ url_for('users.reset_request') }}">Forgot Password?</a>
-            </small>
         </fieldset>
+        <div class="form-group">
+            {{ form.submit(class="btn btn-outline-info") }}
+        </div>
+        <small class="text-muted ml-2">
+            <a href="{{ url_for('users.reset_request') }}">Forgot Password?</a>
+        </small>
     </form>
 </div>
 <div class="border-top pt-3">
     <small class="text-muted">
-        Need An Account? <a href="{{ url_for('users.register') }}" class="ml-2">Sign Up Now</a>
+        Need an account? <a href="{{ url_for('users.register') }}" class="ml-2">Register</a>
     </small>
 </div>
-
 {% endblock %}
