--- a/src/flaskblog/templates/post.html
+++ b/src/flaskblog/templates/post.html
@@ -1,4 +1,4 @@
-{% extends 'root.html' %}
+{% extends "root.html" %}
 
 {% block body %}
 <article class="media content-section">
@@ -6,12 +6,13 @@
         class="rounded-circle article-img">
     <div class="media-body">
         <div class="article-metadata">
-            <a class="mr-2" href="{{ url_for('users.account', id=post.author.id) }}">{{ post.author.username }}</a>
+            <a class="mr-2" href="{{ url_for('users.account', user_id=post.user_id) }}">{{ post.author.username }}</a>
             <small class="text-muted">{{ post.date_posted.strftime('%Y-%m-%d') }}</small>
             {% if post.author == current_user %}
-            <div class="">
-                <a href="{{ url_for('posts.update_post', post_id=post.id) }}" class="btn btn-secondary btn-sm m-1">Update</a>
-                <button class="btn btn-danger btn-sm m-1" data-toggle="modal" type="button" data-target="#deleteModal">Delete</button>
+            <div>
+                <a href="{{ url_for('posts.update_post', post_id=post.id) }}" class="btn btn-secondary btn-sm my-1">Update</a>
+                <button type="button" class="btn btn-danger btn-sm m-1" data-toggle="modal"
+                    data-target="#deleteModal">Delete</button>
             </div>
             {% endif %}
         </div>
@@ -19,25 +20,21 @@
         <p class="article-content">{{ post.content }}</p>
     </div>
 </article>
-
 <!-- Modal -->
 <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel"
     aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="deleteModalLabel">{{ post.title }}</h5>
+                <h5 class="modal-title" id="deleteModalLabel">Delete Post?</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <div class="modal-body">
-                Are you sure you want to delete this post named "{{post.title}}"!
-            </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                <form action="{{ url_for('posts.delete_post', post_id=post.id) }}" method="POST">
-                    <input type="submit" value="Delete" class="btn btn-danger">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <form action="{{url_for('posts.delete_post', post_id=post.id)}}" method="post">
+                    <input type="submit" class="btn btn-danger" value="Delete">
                 </form>
             </div>
         </div>
