--- a/src/flaskblog/templates/reset_password.html
+++ b/src/flaskblog/templates/reset_password.html
@@ -5,33 +5,7 @@
     <form method="POST" action="">
         {{ form.hidden_tag() }}
         <fieldset class="form-group">
-            <legend class="border-bottom mb-4">Join Today</legend>
-            <div class="form-group">
-                {{ form.username.label(class="form-control-label") }}
-                {% if form.username.errors %}
-                    {{ form.username(class="form-control form-control-lg is-invalid") }}
-                    <div class="invalid-feedback">
-                        {% for error in form.username.errors %}
-                            <span>{{ error }}</span>
-                        {% endfor %}
-                    </div>
-                {% else %}
-                    {{ form.username(class="form-control form-control-lg") }}
-                {% endif %}
-            </div>
-            <div class="form-group">
-                {{ form.email.label(class="form-control-label") }}
-                {% if form.email.errors %}
-                    {{ form.email(class="form-control form-control-lg is-invalid") }}
-                    <div class="invalid-feedback">
-                        {% for error in form.email.errors %}
-                            <span>{{ error }}</span>
-                        {% endfor %}
-                    </div>
-                    {% else %}
-                    {{ form.email(class="form-control form-control-lg") }}
-                {% endif %}
-            </div>
+            <legend class="border-bottom mb-4">Reset Password</legend>
             <div class="form-group">
                 {{ form.password.label(class="form-control-label") }}
                 {% if form.password.errors %}
@@ -41,7 +15,7 @@
                             <span>{{ error }}</span>
                         {% endfor %}
                     </div>
-                {% else %}
+                    {% else %}
                     {{ form.password(class="form-control form-control-lg") }}
                 {% endif %}
             </div>
@@ -54,7 +28,7 @@
                             <span>{{ error }}</span>
                         {% endfor %}
                     </div>
-                {% else %}
+                    {% else %}
                     {{ form.confirm_password(class="form-control form-control-lg") }}
                 {% endif %}
             </div>
@@ -63,10 +37,5 @@
             {{ form.submit(class="btn btn-outline-info") }}
         </div>
     </form>
-</div>
-<div class="border-top pt-3">
-    <small class="text-muted">
-        Already have an account? <a href="{{ url_for('users.login') }}" class="ml-2">Login</a>
-    </small>
 </div>
 {% endblock %}
